parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classdefs declarations fundefs instructions
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> <empty>
Rule 4     declaration -> TYPE inits ;
Rule 5     declaration -> id classinits ;
Rule 6     declaration -> error ;
Rule 7     inits -> inits , init
Rule 8     inits -> init
Rule 9     init -> id = expression
Rule 10    classinits -> classinits , classinit
Rule 11    classinits -> classinit
Rule 12    classinit -> id
Rule 13    instructions -> instructions instruction
Rule 14    instructions -> instruction
Rule 15    instruction -> print_instr
Rule 16    instruction -> labeled_instr
Rule 17    instruction -> assignment
Rule 18    instruction -> choice_instr
Rule 19    instruction -> while_instr
Rule 20    instruction -> repeat_instr
Rule 21    instruction -> return_instr
Rule 22    instruction -> break_instr
Rule 23    instruction -> continue_instr
Rule 24    instruction -> compound_instr
Rule 25    print_instr -> PRINT expression ;
Rule 26    print_instr -> PRINT error ;
Rule 27    labeled_instr -> id : instruction
Rule 28    assignment -> access = expression ;
Rule 29    access -> id
Rule 30    access -> id . id
Rule 31    choice_instr -> IF ( condition ) instruction
Rule 32    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 33    choice_instr -> IF ( error ) instruction
Rule 34    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 35    while_instr -> WHILE ( condition ) instruction
Rule 36    while_instr -> WHILE ( error ) instruction
Rule 37    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 38    return_instr -> RETURN expression ;
Rule 39    continue_instr -> CONTINUE ;
Rule 40    break_instr -> BREAK ;
Rule 41    compound_instr -> { declarations instructions }
Rule 42    condition -> expression
Rule 43    const -> integer
Rule 44    const -> float
Rule 45    const -> string
Rule 46    integer -> INTEGER
Rule 47    float -> FLOAT
Rule 48    string -> STRING
Rule 49    id -> ID
Rule 50    expression -> const
Rule 51    expression -> access
Rule 52    expression -> expression + expression
Rule 53    expression -> expression - expression
Rule 54    expression -> expression * expression
Rule 55    expression -> expression / expression
Rule 56    expression -> expression % expression
Rule 57    expression -> expression | expression
Rule 58    expression -> expression & expression
Rule 59    expression -> expression ^ expression
Rule 60    expression -> expression AND expression
Rule 61    expression -> expression OR expression
Rule 62    expression -> expression SHL expression
Rule 63    expression -> expression SHR expression
Rule 64    expression -> expression EQ expression
Rule 65    expression -> expression NEQ expression
Rule 66    expression -> expression > expression
Rule 67    expression -> expression < expression
Rule 68    expression -> expression LE expression
Rule 69    expression -> expression GE expression
Rule 70    expression -> ( expression )
Rule 71    expression -> ( error )
Rule 72    expression -> access ( expr_list_or_empty )
Rule 73    expression -> access ( error )
Rule 74    expr_list_or_empty -> expr_list
Rule 75    expr_list_or_empty -> <empty>
Rule 76    expr_list -> expr_list , expression
Rule 77    expr_list -> expression
Rule 78    fundefs -> fundef fundefs
Rule 79    fundefs -> <empty>
Rule 80    fundef -> TYPE id ( args_list_or_empty ) compound_instr
Rule 81    fundef -> id id ( args_list_or_empty ) compound_instr
Rule 82    args_list_or_empty -> args_list
Rule 83    args_list_or_empty -> <empty>
Rule 84    args_list -> args_list , arg
Rule 85    args_list -> arg
Rule 86    arg -> TYPE id
Rule 87    arg -> id id
Rule 88    classdefs -> classdef classdefs
Rule 89    classdefs -> <empty>
Rule 90    classdef -> accessmodificator CLASS id classcontent
Rule 91    classdef -> accessmodificator CLASS id EXTENDS id classcontent
Rule 92    classcontent -> { fielddefs methoddefs }
Rule 93    fielddefs -> fielddefs fielddef
Rule 94    fielddefs -> <empty>
Rule 95    fielddef -> accessmodificator declaration
Rule 96    methoddefs -> methoddefs methoddef
Rule 97    methoddefs -> <empty>
Rule 98    methoddef -> accessmodificator fundef
Rule 99    accessmodificator -> PRIVATE
Rule 100   accessmodificator -> PROTECTED
Rule 101   accessmodificator -> PUBLIC

Terminals, with rules where they appear

%                    : 56
&                    : 58
(                    : 31 32 33 34 35 36 70 71 72 73 80 81
)                    : 31 32 33 34 35 36 70 71 72 73 80 81
*                    : 54
+                    : 52
,                    : 7 10 76 84
-                    : 53
.                    : 30
/                    : 55
:                    : 27
;                    : 4 5 6 25 26 28 37 38 39 40
<                    : 67
=                    : 9 28
>                    : 66
AND                  : 60
BREAK                : 40
CLASS                : 90 91
CONTINUE             : 39
ELSE                 : 32 34
EQ                   : 64
EXTENDS              : 91
FLOAT                : 47
GE                   : 69
ID                   : 49
IF                   : 31 32 33 34
INTEGER              : 46
LE                   : 68
NEQ                  : 65
OR                   : 61
PRINT                : 25 26
PRIVATE              : 99
PROTECTED            : 100
PUBLIC               : 101
REPEAT               : 37
RETURN               : 38
SHL                  : 62
SHR                  : 63
STRING               : 48
TYPE                 : 4 80 86
UNTIL                : 37
WHILE                : 35 36
^                    : 59
error                : 6 26 33 34 36 71 73
{                    : 41 92
|                    : 57
}                    : 41 92

Nonterminals, with rules where they appear

access               : 28 51 72 73
accessmodificator    : 90 91 95 98
arg                  : 84 85
args_list            : 82 84
args_list_or_empty   : 80 81
assignment           : 17
break_instr          : 22
choice_instr         : 18
classcontent         : 90 91
classdef             : 88
classdefs            : 1 88
classinit            : 10 11
classinits           : 5 10
compound_instr       : 24 80 81
condition            : 31 32 35 37
const                : 50
continue_instr       : 23
declaration          : 2 95
declarations         : 1 2 41
expr_list            : 74 76
expr_list_or_empty   : 72
expression           : 9 25 28 38 42 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 76 77
fielddef             : 93
fielddefs            : 92 93
float                : 44
fundef               : 78 98
fundefs              : 1 78
id                   : 5 9 12 27 29 30 30 80 81 81 86 87 87 90 91 91
init                 : 7 8
inits                : 4 7
instruction          : 13 14 27 31 32 32 33 34 34 35 36
instructions         : 1 13 37 41
integer              : 43
labeled_instr        : 16
methoddef            : 96
methoddefs           : 92 96
print_instr          : 15
program              : 0
repeat_instr         : 20
return_instr         : 21
string               : 45
while_instr          : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classdefs declarations fundefs instructions
    (88) classdefs -> . classdef classdefs
    (89) classdefs -> .
    (90) classdef -> . accessmodificator CLASS id classcontent
    (91) classdef -> . accessmodificator CLASS id EXTENDS id classcontent
    (99) accessmodificator -> . PRIVATE
    (100) accessmodificator -> . PROTECTED
    (101) accessmodificator -> . PUBLIC

    TYPE            reduce using rule 89 (classdefs -> .)
    error           reduce using rule 89 (classdefs -> .)
    ID              reduce using rule 89 (classdefs -> .)
    PRINT           reduce using rule 89 (classdefs -> .)
    IF              reduce using rule 89 (classdefs -> .)
    WHILE           reduce using rule 89 (classdefs -> .)
    REPEAT          reduce using rule 89 (classdefs -> .)
    RETURN          reduce using rule 89 (classdefs -> .)
    BREAK           reduce using rule 89 (classdefs -> .)
    CONTINUE        reduce using rule 89 (classdefs -> .)
    {               reduce using rule 89 (classdefs -> .)
    PRIVATE         shift and go to state 3
    PROTECTED       shift and go to state 4
    PUBLIC          shift and go to state 7

    accessmodificator              shift and go to state 1
    classdef                       shift and go to state 2
    program                        shift and go to state 5
    classdefs                      shift and go to state 6

state 1

    (90) classdef -> accessmodificator . CLASS id classcontent
    (91) classdef -> accessmodificator . CLASS id EXTENDS id classcontent

    CLASS           shift and go to state 8


state 2

    (88) classdefs -> classdef . classdefs
    (88) classdefs -> . classdef classdefs
    (89) classdefs -> .
    (90) classdef -> . accessmodificator CLASS id classcontent
    (91) classdef -> . accessmodificator CLASS id EXTENDS id classcontent
    (99) accessmodificator -> . PRIVATE
    (100) accessmodificator -> . PROTECTED
    (101) accessmodificator -> . PUBLIC

    TYPE            reduce using rule 89 (classdefs -> .)
    error           reduce using rule 89 (classdefs -> .)
    ID              reduce using rule 89 (classdefs -> .)
    PRINT           reduce using rule 89 (classdefs -> .)
    IF              reduce using rule 89 (classdefs -> .)
    WHILE           reduce using rule 89 (classdefs -> .)
    REPEAT          reduce using rule 89 (classdefs -> .)
    RETURN          reduce using rule 89 (classdefs -> .)
    BREAK           reduce using rule 89 (classdefs -> .)
    CONTINUE        reduce using rule 89 (classdefs -> .)
    {               reduce using rule 89 (classdefs -> .)
    PRIVATE         shift and go to state 3
    PROTECTED       shift and go to state 4
    PUBLIC          shift and go to state 7

    accessmodificator              shift and go to state 1
    classdef                       shift and go to state 2
    classdefs                      shift and go to state 9

state 3

    (99) accessmodificator -> PRIVATE .

    CLASS           reduce using rule 99 (accessmodificator -> PRIVATE .)
    TYPE            reduce using rule 99 (accessmodificator -> PRIVATE .)
    error           reduce using rule 99 (accessmodificator -> PRIVATE .)
    ID              reduce using rule 99 (accessmodificator -> PRIVATE .)


state 4

    (100) accessmodificator -> PROTECTED .

    CLASS           reduce using rule 100 (accessmodificator -> PROTECTED .)
    TYPE            reduce using rule 100 (accessmodificator -> PROTECTED .)
    error           reduce using rule 100 (accessmodificator -> PROTECTED .)
    ID              reduce using rule 100 (accessmodificator -> PROTECTED .)


state 5

    (0) S' -> program .



state 6

    (1) program -> classdefs . declarations fundefs instructions
    (2) declarations -> . declarations declaration
    (3) declarations -> .

    TYPE            reduce using rule 3 (declarations -> .)
    error           reduce using rule 3 (declarations -> .)
    ID              reduce using rule 3 (declarations -> .)
    PRINT           reduce using rule 3 (declarations -> .)
    IF              reduce using rule 3 (declarations -> .)
    WHILE           reduce using rule 3 (declarations -> .)
    REPEAT          reduce using rule 3 (declarations -> .)
    RETURN          reduce using rule 3 (declarations -> .)
    BREAK           reduce using rule 3 (declarations -> .)
    CONTINUE        reduce using rule 3 (declarations -> .)
    {               reduce using rule 3 (declarations -> .)

    declarations                   shift and go to state 10

state 7

    (101) accessmodificator -> PUBLIC .

    CLASS           reduce using rule 101 (accessmodificator -> PUBLIC .)
    TYPE            reduce using rule 101 (accessmodificator -> PUBLIC .)
    error           reduce using rule 101 (accessmodificator -> PUBLIC .)
    ID              reduce using rule 101 (accessmodificator -> PUBLIC .)


state 8

    (90) classdef -> accessmodificator CLASS . id classcontent
    (91) classdef -> accessmodificator CLASS . id EXTENDS id classcontent
    (49) id -> . ID

    ID              shift and go to state 11

    id                             shift and go to state 12

state 9

    (88) classdefs -> classdef classdefs .

    TYPE            reduce using rule 88 (classdefs -> classdef classdefs .)
    error           reduce using rule 88 (classdefs -> classdef classdefs .)
    ID              reduce using rule 88 (classdefs -> classdef classdefs .)
    PRINT           reduce using rule 88 (classdefs -> classdef classdefs .)
    IF              reduce using rule 88 (classdefs -> classdef classdefs .)
    WHILE           reduce using rule 88 (classdefs -> classdef classdefs .)
    REPEAT          reduce using rule 88 (classdefs -> classdef classdefs .)
    RETURN          reduce using rule 88 (classdefs -> classdef classdefs .)
    BREAK           reduce using rule 88 (classdefs -> classdef classdefs .)
    CONTINUE        reduce using rule 88 (classdefs -> classdef classdefs .)
    {               reduce using rule 88 (classdefs -> classdef classdefs .)


state 10

    (1) program -> classdefs declarations . fundefs instructions
    (2) declarations -> declarations . declaration
    (78) fundefs -> . fundef fundefs
    (79) fundefs -> .
    (4) declaration -> . TYPE inits ;
    (5) declaration -> . id classinits ;
    (6) declaration -> . error ;
    (80) fundef -> . TYPE id ( args_list_or_empty ) compound_instr
    (81) fundef -> . id id ( args_list_or_empty ) compound_instr
    (49) id -> . ID

  ! shift/reduce conflict for ID resolved as shift
    PRINT           reduce using rule 79 (fundefs -> .)
    IF              reduce using rule 79 (fundefs -> .)
    WHILE           reduce using rule 79 (fundefs -> .)
    REPEAT          reduce using rule 79 (fundefs -> .)
    RETURN          reduce using rule 79 (fundefs -> .)
    BREAK           reduce using rule 79 (fundefs -> .)
    CONTINUE        reduce using rule 79 (fundefs -> .)
    {               reduce using rule 79 (fundefs -> .)
    TYPE            shift and go to state 17
    error           shift and go to state 15
    ID              shift and go to state 11

  ! ID              [ reduce using rule 79 (fundefs -> .) ]

    fundefs                        shift and go to state 13
    fundef                         shift and go to state 14
    declaration                    shift and go to state 16
    id                             shift and go to state 18

state 11

    (49) id -> ID .

    .               reduce using rule 49 (id -> ID .)
    (               reduce using rule 49 (id -> ID .)
    +               reduce using rule 49 (id -> ID .)
    -               reduce using rule 49 (id -> ID .)
    *               reduce using rule 49 (id -> ID .)
    /               reduce using rule 49 (id -> ID .)
    %               reduce using rule 49 (id -> ID .)
    |               reduce using rule 49 (id -> ID .)
    &               reduce using rule 49 (id -> ID .)
    ^               reduce using rule 49 (id -> ID .)
    AND             reduce using rule 49 (id -> ID .)
    OR              reduce using rule 49 (id -> ID .)
    SHL             reduce using rule 49 (id -> ID .)
    SHR             reduce using rule 49 (id -> ID .)
    EQ              reduce using rule 49 (id -> ID .)
    NEQ             reduce using rule 49 (id -> ID .)
    >               reduce using rule 49 (id -> ID .)
    <               reduce using rule 49 (id -> ID .)
    LE              reduce using rule 49 (id -> ID .)
    GE              reduce using rule 49 (id -> ID .)
    ;               reduce using rule 49 (id -> ID .)
    )               reduce using rule 49 (id -> ID .)
    ,               reduce using rule 49 (id -> ID .)
    EXTENDS         reduce using rule 49 (id -> ID .)
    {               reduce using rule 49 (id -> ID .)
    :               reduce using rule 49 (id -> ID .)
    =               reduce using rule 49 (id -> ID .)
    ID              reduce using rule 49 (id -> ID .)


state 12

    (90) classdef -> accessmodificator CLASS id . classcontent
    (91) classdef -> accessmodificator CLASS id . EXTENDS id classcontent
    (92) classcontent -> . { fielddefs methoddefs }

    EXTENDS         shift and go to state 20
    {               shift and go to state 21

    classcontent                   shift and go to state 19

state 13

    (1) program -> classdefs declarations fundefs . instructions
    (13) instructions -> . instructions instruction
    (14) instructions -> . instruction
    (15) instruction -> . print_instr
    (16) instruction -> . labeled_instr
    (17) instruction -> . assignment
    (18) instruction -> . choice_instr
    (19) instruction -> . while_instr
    (20) instruction -> . repeat_instr
    (21) instruction -> . return_instr
    (22) instruction -> . break_instr
    (23) instruction -> . continue_instr
    (24) instruction -> . compound_instr
    (25) print_instr -> . PRINT expression ;
    (26) print_instr -> . PRINT error ;
    (27) labeled_instr -> . id : instruction
    (28) assignment -> . access = expression ;
    (31) choice_instr -> . IF ( condition ) instruction
    (32) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (33) choice_instr -> . IF ( error ) instruction
    (34) choice_instr -> . IF ( error ) instruction ELSE instruction
    (35) while_instr -> . WHILE ( condition ) instruction
    (36) while_instr -> . WHILE ( error ) instruction
    (37) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (38) return_instr -> . RETURN expression ;
    (40) break_instr -> . BREAK ;
    (39) continue_instr -> . CONTINUE ;
    (41) compound_instr -> . { declarations instructions }
    (49) id -> . ID
    (29) access -> . id
    (30) access -> . id . id

    PRINT           shift and go to state 26
    IF              shift and go to state 25
    WHILE           shift and go to state 39
    REPEAT          shift and go to state 33
    RETURN          shift and go to state 23
    BREAK           shift and go to state 40
    CONTINUE        shift and go to state 42
    {               shift and go to state 43
    ID              shift and go to state 11

    return_instr                   shift and go to state 29
    assignment                     shift and go to state 34
    instruction                    shift and go to state 22
    compound_instr                 shift and go to state 36
    continue_instr                 shift and go to state 30
    labeled_instr                  shift and go to state 35
    access                         shift and go to state 32
    print_instr                    shift and go to state 41
    choice_instr                   shift and go to state 24
    break_instr                    shift and go to state 38
    while_instr                    shift and go to state 31
    id                             shift and go to state 27
    repeat_instr                   shift and go to state 28
    instructions                   shift and go to state 37

state 14

    (78) fundefs -> fundef . fundefs
    (78) fundefs -> . fundef fundefs
    (79) fundefs -> .
    (80) fundef -> . TYPE id ( args_list_or_empty ) compound_instr
    (81) fundef -> . id id ( args_list_or_empty ) compound_instr
    (49) id -> . ID

  ! shift/reduce conflict for ID resolved as shift
    PRINT           reduce using rule 79 (fundefs -> .)
    IF              reduce using rule 79 (fundefs -> .)
    WHILE           reduce using rule 79 (fundefs -> .)
    REPEAT          reduce using rule 79 (fundefs -> .)
    RETURN          reduce using rule 79 (fundefs -> .)
    BREAK           reduce using rule 79 (fundefs -> .)
    CONTINUE        reduce using rule 79 (fundefs -> .)
    {               reduce using rule 79 (fundefs -> .)
    TYPE            shift and go to state 45
    ID              shift and go to state 11

  ! ID              [ reduce using rule 79 (fundefs -> .) ]

    fundefs                        shift and go to state 44
    id                             shift and go to state 46
    fundef                         shift and go to state 14

state 15

    (6) declaration -> error . ;

    ;               shift and go to state 47


state 16

    (2) declarations -> declarations declaration .

    TYPE            reduce using rule 2 (declarations -> declarations declaration .)
    error           reduce using rule 2 (declarations -> declarations declaration .)
    ID              reduce using rule 2 (declarations -> declarations declaration .)
    PRINT           reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    WHILE           reduce using rule 2 (declarations -> declarations declaration .)
    REPEAT          reduce using rule 2 (declarations -> declarations declaration .)
    RETURN          reduce using rule 2 (declarations -> declarations declaration .)
    BREAK           reduce using rule 2 (declarations -> declarations declaration .)
    CONTINUE        reduce using rule 2 (declarations -> declarations declaration .)
    {               reduce using rule 2 (declarations -> declarations declaration .)


state 17

    (4) declaration -> TYPE . inits ;
    (80) fundef -> TYPE . id ( args_list_or_empty ) compound_instr
    (7) inits -> . inits , init
    (8) inits -> . init
    (49) id -> . ID
    (9) init -> . id = expression

    ID              shift and go to state 11

    init                           shift and go to state 48
    inits                          shift and go to state 49
    id                             shift and go to state 50

state 18

    (5) declaration -> id . classinits ;
    (81) fundef -> id . id ( args_list_or_empty ) compound_instr
    (10) classinits -> . classinits , classinit
    (11) classinits -> . classinit
    (49) id -> . ID
    (12) classinit -> . id

    ID              shift and go to state 11

    classinits                     shift and go to state 51
    id                             shift and go to state 53
    classinit                      shift and go to state 52

state 19

    (90) classdef -> accessmodificator CLASS id classcontent .

    PRIVATE         reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    PROTECTED       reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    PUBLIC          reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    TYPE            reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    error           reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    ID              reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    PRINT           reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    IF              reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    WHILE           reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    REPEAT          reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    RETURN          reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    BREAK           reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    CONTINUE        reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)
    {               reduce using rule 90 (classdef -> accessmodificator CLASS id classcontent .)


state 20

    (91) classdef -> accessmodificator CLASS id EXTENDS . id classcontent
    (49) id -> . ID

    ID              shift and go to state 11

    id                             shift and go to state 54

state 21

    (92) classcontent -> { . fielddefs methoddefs }
    (93) fielddefs -> . fielddefs fielddef
    (94) fielddefs -> .

    PRIVATE         reduce using rule 94 (fielddefs -> .)
    PROTECTED       reduce using rule 94 (fielddefs -> .)
    PUBLIC          reduce using rule 94 (fielddefs -> .)
    }               reduce using rule 94 (fielddefs -> .)

    fielddefs                      shift and go to state 55

state 22

    (14) instructions -> instruction .

    PRINT           reduce using rule 14 (instructions -> instruction .)
    IF              reduce using rule 14 (instructions -> instruction .)
    WHILE           reduce using rule 14 (instructions -> instruction .)
    REPEAT          reduce using rule 14 (instructions -> instruction .)
    RETURN          reduce using rule 14 (instructions -> instruction .)
    BREAK           reduce using rule 14 (instructions -> instruction .)
    CONTINUE        reduce using rule 14 (instructions -> instruction .)
    {               reduce using rule 14 (instructions -> instruction .)
    ID              reduce using rule 14 (instructions -> instruction .)
    $end            reduce using rule 14 (instructions -> instruction .)
    }               reduce using rule 14 (instructions -> instruction .)
    UNTIL           reduce using rule 14 (instructions -> instruction .)


state 23

    (38) return_instr -> RETURN . expression ;
    (50) expression -> . const
    (51) expression -> . access
    (52) expression -> . expression + expression
    (53) expression -> . expression - expression
    (54) expression -> . expression * expression
    (55) expression -> . expression / expression
    (56) expression -> . expression % expression
    (57) expression -> . expression | expression
    (58) expression -> . expression & expression
    (59) expression -> . expression ^ expression
    (60) expression -> . expression AND expression
    (61) expression -> . expression OR expression
    (62) expression -> . expression SHL expression
    (63) expression -> . expression SHR expression
    (64) expression -> . expression EQ expression
    (65) expression -> . expression NEQ expression
    (66) expression -> . expression > expression
    (67) expression -> . expression < expression
    (68) expression -> . expression LE expression
    (69) expression -> . expression GE expression
    (70) expression -> . ( expression )
    (71) expression -> . ( error )
    (72) expression -> . access ( expr_list_or_empty )
    (73) expression -> . access ( error )
    (43) const -> . integer
    (44) const -> . float
    (45) const -> . string
    (29) access -> . id
    (30) access -> . id . id
    (46) integer -> . INTEGER
    (47) float -> . FLOAT
    (48) string -> . STRING
    (49) id -> . ID

    (               shift and go to state 65
    INTEGER         shift and go to state 62
    FLOAT           shift and go to state 64
    STRING          shift and go to state 57
    ID              shift and go to state 11

    const                          shift and go to state 60
    string                         shift and go to state 63
    float                          shift and go to state 56
    access                         shift and go to state 61
    integer                        shift and go to state 58
    expression                     shift and go to state 66
    id                             shift and go to state 59

state 24

    (18) instruction -> choice_instr .
